--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,3 +2,6 @@
 <script>
   window.global = window;
 </script>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet" />
