--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -5,4 +5,7 @@
 <link rel="stylesheet" href="https://unpkg.com/@acab/reset.css" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&amp;display=swap" rel="stylesheet" />
+<link
+  href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&amp;display=swap"
+  rel="stylesheet"
+/>
