--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -4,8 +4,8 @@
 
 <link rel="stylesheet" href="https://unpkg.com/@acab/reset.css" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous" />
 <link
-  href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&amp;display=swap"
+  href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500&amp;family=Poppins:wght@400;700&amp;display=swap"
   rel="stylesheet"
 />
